# claude-tools

./: .claude-tools.json  .gitignore  CLAUDE.md  Cargo.toml  README.md  claude-code-slash-commands-research.md  lifecycle.db
examples/: streaming_benchmark.rs
src/: config.rs  errors.rs  lib.rs  main.rs
src/claude/: analytics.rs  cache.rs  conversation.rs  directory.rs  export.rs  mod.rs  parser.rs  search.rs  streaming.rs  timeline.rs
src/cli/: args.rs  commands.rs  mod.rs
src/mcp/: claude_config.rs  commands.rs  config.rs  discovery.rs  mod.rs  server.rs
src/ui/: app.rs  components.rs  conversation_display.rs  events.rs  file_watcher.rs  mod.rs
tasks/: implementation-directives.md  roadmap.md  tasks-directive.md
tasks/active/: TASK-0003-00-00.md  TASK-0005-00-00.md  TASK-0006-00-00.md  TASK-0007-00-00.md  TASK-0010-00-00.md  TASK-0011-00-00.md  TASK-0012-00-00.md  TASK-0013-00-00.md  TASK-0013-01-00.md  TASK-0013-02-00.md  TASK-0013-03-00.md  TASK-0013-04-00.md  TASK-0014-00-00.md  TASK-0015-00-00.md  TASK-0016-00-00.md  TASK-0017-00-00.md  TASK-0018-00-00.md
tasks/completed/: TASK-0001-00-00.md  TASK-0002-00-00.md  TASK-0003-00-00.md  TASK-0004-00-00.md  TASK-0005-00-00.md  TASK-0006-00-00.md  TASK-0007-00-00.md  TASK-0008-00-00.md  TASK-0009-00-00.md
tasks/templates/: task-template.md
tests/: cli_tests.rs
