[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"
authors = ["jeffwikstrom"]
description = "A comprehensive suite of tools for working with Claude, Claude Code, and MCP servers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeffwikstrom/claude-tools"
keywords = ["claude", "cli", "conversation", "mcp"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
